Relax CORS policy by allowing all origins